syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.curd";
option java_outer_classname = "TemplateProto";
option objc_class_prefix = "TEMPLATESRV";

package curd;
option go_package = "./;curd";

import "curd_common.proto";

service Template{
    rpc Add(TemplateInfo)returns(CommonResponse){}
    rpc Update(TemplateInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryTemplateRequest)returns(QueryTemplateResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllTemplateResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetTemplateDetailResponse){}
    rpc Copy(GetDetailRequest)returns(CommonResponse){}
}

message TemplateInfo{
    string id=1;
    string tenantID=2;
    string name=3;
    string language=4;
    string content=5;
    string description=6;
    string group=7;
}

message QueryTemplateRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
    // @inject_tag: uri:"name" form:"name"
    string name=5;
    // @inject_tag: uri:"language" form:"language"
    string language=6;
    // @inject_tag: uri:"group" form:"group"
    string group=7;
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=8;
    // @inject_tag: uri:"id" form:"id"
    string id=9;
}

message QueryTemplateResponse{
    Code code=1;
    string message=2;
    repeated TemplateInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllTemplateResponse{
    Code code=1;
    string message=2;
    repeated TemplateInfo data=3;
}

message GetTemplateDetailResponse{
    Code code=1;
    string message=2;
    TemplateInfo data=3;
}

message GenTemplateCodeResponse{
    Code code=1;
    string message=2;
    string data=3;
}